--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "@types/mongodb": "^2.2.18",
       "@types/node": "^8.0.29",
       "@types/node-schedule": "^1.2.1",
+      "@types/winston": "^2.3.7",
       "@types/yargs": "^10.0.0",
       "ts-node": "3.3.0",
       "typescript": "2.5.2"
@@ -22,6 +23,7 @@
       "node-schedule": "^1.2.5",
       "reflect-metadata": "^0.1.10",
       "typeorm": "0.1.6",
+      "winston": "^2.4.0",
       "yargs": "^10.0.3"
    },
    "scripts": {
