--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
    },
    "dependencies": {
       "body-parser": "^1.18.1",
+      "bson": "^4.0.0",
       "csvtojson": "^1.1.9",
       "express": "^4.15.4",
       "jsonp": "^0.2.1",
