--- a/orm.config.json
+++ b/orm.config.json
@@ -1,24 +1,18 @@
 {
-   "type": "mongodb",
-   "host": "sanderblue.com",
-    "port": 27017,
-    "username": "admin",
-    "password": "ibmchinccd",
-    "database": "snow",
-   "synchronize": true,
-   "logging": false,
-   "entities": [
-      "src/entity/**/*.ts"
-   ],
-   "migrations": [
-      "src/migration/**/*.ts"
-   ],
-   "subscribers": [
-      "src/subscriber/**/*.ts"
-   ],
-   "cli": {
-      "entitiesDir": "src/entity",
-      "migrationsDir": "src/migration",
-      "subscribersDir": "src/subscriber"
-   }
+  "type": "mongodb",
+  "host": "sanderblue.com",
+  "port": 27017,
+  "username": "admin",
+  "password": "ibmchinccd",
+  "database": "snow",
+  "synchronize": true,
+  "logging": false,
+  "entities": ["src/entity/**/*.ts"],
+  "migrations": ["src/migration/**/*.ts"],
+  "subscribers": ["src/subscriber/**/*.ts"],
+  "cli": {
+    "entitiesDir": "src/entity",
+    "migrationsDir": "src/migration",
+    "subscribersDir": "src/subscriber"
+  }
 }
