--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/csvtojson": "^1.1.5",
+      "@types/dotenv": "^6.1.0",
       "@types/jsonp": "^0.2.0",
       "@types/mongodb": "^2.2.18",
       "@types/node": "^8.0.29",
@@ -17,6 +18,7 @@
       "body-parser": "^1.18.1",
       "bson": "^4.0.0",
       "csvtojson": "^1.1.9",
+      "dotenv": "^6.1.0",
       "express": "^4.15.4",
       "jsonp": "^0.2.1",
       "moment": "^2.20.1",
